Finished linking up basic pane on configuration controller.  still not sold on the layout...

--- a/English.lproj/PassengerPaneCocoaPref.xib
+++ b/English.lproj/PassengerPaneCocoaPref.xib
@@ -3,16 +3,16 @@
 	<data>
 		<int key="IBDocument.SystemTarget">1060</int>
 		<string key="IBDocument.SystemVersion">10F569</string>
-		<string key="IBDocument.InterfaceBuilderVersion">762</string>
+		<string key="IBDocument.InterfaceBuilderVersion">740</string>
 		<string key="IBDocument.AppKitVersion">1038.29</string>
 		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">762</string>
+			<string key="NS.object.0">740</string>
 		</object>
 		<array class="NSMutableArray" key="IBDocument.EditedObjectIDs">
-			<integer value="859"/>
 			<integer value="6"/>
+			<integer value="859"/>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1387,6 +1387,38 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 													<string key="NSContents"/>
 													<reference key="NSSupport" ref="352769653"/>
 													<reference key="NSControlView" ref="334809576"/>
+													<reference key="NSBackgroundColor" ref="431751689"/>
+													<reference key="NSTextColor" ref="1064423489"/>
+												</object>
+											</object>
+											<object class="NSTextField" id="624312837">
+												<reference key="NSNextResponder" ref="310461417"/>
+												<int key="NSvFlags">268</int>
+												<string key="NSFrame">{{206, 82}, {234, 17}}</string>
+												<reference key="NSSuperview" ref="310461417"/>
+												<bool key="NSEnabled">YES</bool>
+												<object class="NSTextFieldCell" key="NSCell" id="547646289">
+													<int key="NSCellFlags">69336641</int>
+													<int key="NSCellFlags2">4196864</int>
+													<string key="NSContents"/>
+													<reference key="NSSupport" ref="352769653"/>
+													<reference key="NSControlView" ref="624312837"/>
+													<reference key="NSBackgroundColor" ref="431751689"/>
+													<reference key="NSTextColor" ref="1064423489"/>
+												</object>
+											</object>
+											<object class="NSTextField" id="586986456">
+												<reference key="NSNextResponder" ref="310461417"/>
+												<int key="NSvFlags">268</int>
+												<string key="NSFrame">{{206, 55}, {234, 17}}</string>
+												<reference key="NSSuperview" ref="310461417"/>
+												<bool key="NSEnabled">YES</bool>
+												<object class="NSTextFieldCell" key="NSCell" id="142433666">
+													<int key="NSCellFlags">69336641</int>
+													<int key="NSCellFlags2">4196864</int>
+													<string key="NSContents"/>
+													<reference key="NSSupport" ref="352769653"/>
+													<reference key="NSControlView" ref="586986456"/>
 													<reference key="NSBackgroundColor" ref="431751689"/>
 													<reference key="NSTextColor" ref="1064423489"/>
 												</object>
@@ -3584,6 +3616,38 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 					</object>
 					<int key="connectionID">1003</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: apacheModPath</string>
+						<reference key="source" ref="624312837"/>
+						<reference key="destination" ref="1021904126"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="624312837"/>
+							<reference key="NSDestination" ref="1021904126"/>
+							<string key="NSLabel">value: apacheModPath</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">apacheModPath</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">1010</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: apacheConfigPath</string>
+						<reference key="source" ref="586986456"/>
+						<reference key="destination" ref="1021904126"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="586986456"/>
+							<reference key="NSDestination" ref="1021904126"/>
+							<string key="NSLabel">value: apacheConfigPath</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">apacheConfigPath</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">1011</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -4417,6 +4481,8 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 							<reference ref="960044895"/>
 							<reference ref="734690873"/>
 							<reference ref="334809576"/>
+							<reference ref="624312837"/>
+							<reference ref="586986456"/>
 						</array>
 						<reference key="parent" ref="731881170"/>
 					</object>
@@ -4673,6 +4739,32 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<reference key="object" ref="430106252"/>
 						<reference key="parent" ref="334809576"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1004</int>
+						<reference key="object" ref="624312837"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="547646289"/>
+						</array>
+						<reference key="parent" ref="310461417"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1005</int>
+						<reference key="object" ref="547646289"/>
+						<reference key="parent" ref="624312837"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1007</int>
+						<reference key="object" ref="586986456"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="142433666"/>
+						</array>
+						<reference key="parent" ref="310461417"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1008</int>
+						<reference key="object" ref="142433666"/>
+						<reference key="parent" ref="586986456"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -4687,6 +4779,10 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 				</object>
 				<string key="100.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1000.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="1004.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="1005.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="1007.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="1008.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="101.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<array class="NSMutableArray" key="101.IBUserGuides"/>
 				<string key="102.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -4833,9 +4929,9 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 				<string key="818.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="820.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="821.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="853.IBEditorWindowLastContentRect">{{71, 486}, {500, 300}}</string>
+				<string key="853.IBEditorWindowLastContentRect">{{71, 462}, {500, 300}}</string>
 				<string key="853.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="853.IBWindowTemplateEditedContentRect">{{71, 486}, {500, 300}}</string>
+				<string key="853.IBWindowTemplateEditedContentRect">{{71, 462}, {500, 300}}</string>
 				<boolean value="NO" key="853.NSWindowTemplate.visibleAtLaunch"/>
 				<boolean value="NO" key="853.windowTemplate.hasMinSize"/>
 				<string key="853.windowTemplate.minSize">{0, 0}</string>
@@ -4902,7 +4998,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">1003</int>
+			<int key="maxID">1011</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -5598,7 +5694,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 			</array>
 		</object>
 		<int key="IBDocument.localizationMode">0</int>
-		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin.macosx</string>
 			<integer value="1060" key="NS.object.0"/>
@@ -5610,12 +5705,5 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<string key="IBDocument.LastKnownRelativeProjectPath">../PassengerPaneCocoa.xcodeproj</string>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="AlertNoteIcon">{128, 128}</string>
-			<string key="NSAddTemplate">{8, 8}</string>
-			<string key="NSRefreshTemplate">{10, 12}</string>
-			<string key="NSRemoveTemplate">{8, 8}</string>
-			<string key="NSSwitch">{15, 15}</string>
-		</dictionary>
 	</data>
 </archive>
